--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <meta name="facebook-domain-verification" content="3fxknul0ip2dwr9o0cczab2wrjyz4t" />
     <meta name="facebook-domain-verification" content="mw7ijcmhwjuowcb3ae8sfj10mrmi58" />
     <meta name="facebook-domain-verification" content="2zgi0nthiwmn2ipi7tyo9o2bgacy1l" />
   	<meta name="facebook-domain-verification" content="l3352jo8d4e19ncn7b61oh8ns4283n" />
